adiocionando clases e pacotes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:id="@+id/txtCEP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="8"
             android:hint="CEP"
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
